# aeon-benchmark

./: .gitignore  pyproject.toml  readme.md  requirements.txt
aeon_benchmark/forecasting/: arima.py  ets.py  sf_theta.py  theta.py
examples/clustering/: kasba.py
examples/forecasting/: arima.ipynb  auto_ets.ipynb
